fix: Covers on mobiel

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1233,10 +1233,7 @@ span.list-portfolio-categories {
   img.alt-image {
     padding: 0em;
     margin: 0;
-    max-width: 95%;
     width: 100%;
-    max-height: 95%;
-    /* padding-left: 0%; */
     right: 0;
   }
 
